Fix tests failing with incorrect error message due to introduction of implicit class declarations (#2427)
https://github.com/eclipse-jdt/eclipse.jdt.core/pull/2427